# Multiverse

./: LICENSE  README.md  pyproject.toml
Multiverse/: __init__.py  decorator.py  virtual_env_manager.py  worker.py
